fix: fix &nbsp; whitespace error

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,7 +94,7 @@
 }
 
 .hero-image {
-  background-image: url("../img/HeadshotLandscape.webp");
+  background-image: url("../img/headshot_landscape.webp");
   position: relative;
   background-attachment: fixed;
   height: 100vh;
@@ -165,7 +165,7 @@ h4 {
 /* principles of media queries taken from https://www.w3schools.com/cssref/css3_pr_mediaquery.php */
 @media screen and (orientation: portrait) {
   .hero-image {
-    background-image: url("../img/HeadshotSquare.webp");
+    background-image: url("../img/headshot_square.webp");
     background-position: calc(50% - 20px) 0%;
     background-size: auto 100vh;
     height: 100vh;
@@ -179,7 +179,7 @@ h4 {
 /* ----------------------------------------------------------styles for landscape phones */
 @media (orientation: landscape) and (max-width: 768px) {
   .hero-image {
-    background-image: url("../img/HeadshotLandscape.webp");
+    background-image: url("../img/headshot_landscape.webp");
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
@@ -267,7 +267,7 @@ h4 {
 /* ----------------------------------------------------------------Projects page */
 
 .code-image {
-  background-image: url("../img/PythonGen.webp");
+  background-image: url("../img/python_gen.webp");
   position: relative;
   background-position: center;
   background-size: cover;
